--- a/Configuracao/WindowsFormsApp1/WindowsFormsAppprincipal.csproj
+++ b/Configuracao/WindowsFormsApp1/WindowsFormsAppprincipal.csproj
@@ -58,6 +58,12 @@
     <Compile Include="FormBuscarUsuario.Designer.cs">
       <DependentUpon>FormBuscarUsuario.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormConsultaGrupoUsuario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormConsultaGrupoUsuario.Designer.cs">
+      <DependentUpon>FormConsultaGrupoUsuario.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormPrincipais.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -77,6 +83,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormBuscarUsuario.resx">
       <DependentUpon>FormBuscarUsuario.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormConsultaGrupoUsuario.resx">
+      <DependentUpon>FormConsultaGrupoUsuario.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormPrincipais.resx">
       <DependentUpon>FormPrincipais.cs</DependentUpon>
