--- a/Configuracao/DAL/DAL.csproj
+++ b/Configuracao/DAL/DAL.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{281B2AED-CC02-4D91-8E73-B20FA13DB313}</ProjectGuid>
+    <ProjectGuid>{D41B3CF8-B82A-46C3-B188-835A2DB6CC78}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DAL</RootNamespace>
@@ -48,8 +48,8 @@
     <Compile Include="UsuarioDAL.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ClassLibrary1\Models.csproj">
-      <Project>{c0aa9fe1-cd12-4603-a6b5-f0486621ee69}</Project>
+    <ProjectReference Include="..\Models\Models.csproj">
+      <Project>{7b5ca4c0-3240-4c07-ba83-85e9f6adb2ae}</Project>
       <Name>Models</Name>
     </ProjectReference>
   </ItemGroup>
