--- a/Configuracao/DAL/DAL.csproj
+++ b/Configuracao/DAL/DAL.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClienteDAl.cs" />
     <Compile Include="Conexao.cs" />
     <Compile Include="GrupoUsuarioDAL.cs" />
     <Compile Include="PermissaoDAL.cs" />
