--- a/Configuracao/WindowsFormsAppPrincipal/WindowsFormsAppPrincipal.csproj
+++ b/Configuracao/WindowsFormsAppPrincipal/WindowsFormsAppPrincipal.csproj
@@ -82,6 +82,12 @@
     <Compile Include="FormConsultaCliente.Designer.cs">
       <DependentUpon>FormConsultaCliente.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormConsultaFornecedor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormConsultaFornecedor.Designer.cs">
+      <DependentUpon>FormConsultaFornecedor.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormConsultaGrupoUsuario.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -127,6 +133,9 @@
     <EmbeddedResource Include="FormConsultaCliente.resx">
       <DependentUpon>FormConsultaCliente.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormConsultaFornecedor.resx">
+      <DependentUpon>FormConsultaFornecedor.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormConsultaGrupoUsuario.resx">
       <DependentUpon>FormConsultaGrupoUsuario.cs</DependentUpon>
     </EmbeddedResource>
@@ -149,6 +158,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <None Include="Properties\DataSources\Models.Cliente.datasource" />
+    <None Include="Properties\DataSources\Models.Fornecedor.datasource" />
     <None Include="Properties\DataSources\Models.GrupoUsuario.datasource" />
     <None Include="Properties\DataSources\Models.Permissao.datasource" />
     <None Include="Properties\DataSources\Models.Usuario.datasource" />
